force-app/main/default/objects/Zendesk__ZendeskCustomField__c.object
<CustomObject>
    <fields>
        <fullName>Zendesk__SalesforceField__c</fullName>
        <label>Salesforce Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zendesk__SalesforceObject__c</fullName>
        <label>Salesforce Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                    <default>true</default>
                    <label>Account</label>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>Lead</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zendesk__Valid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Valid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zendesk__ZendeskFieldLabel__c</fullName>
        <label>Zendesk Support Field Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zendesk__ZendeskField__c</fullName>
        <label>Zendesk Support Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Zendesk Support Custom Field</label>
    <nameField>
        <displayFormat>ZCF-{YY}{MM}{DD}{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Zendesk Support Custom Fields</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>